# self_healing_RAG_system

./: .env  ingest.py  main.py  pyproject.toml  template.py
chromadb/: chroma.sqlite3
docs/: machine_learning.txt  python_basics.txt
